<resources>
    <string name="app_name">Punto1</string>

    <string name="calcula_tu_area_perimetro_y_volumen">Calcula tu area, perimetro y volumen</string>
    <string name="selecciona_la_figura_a_calcular">Selecciona la figura a calcular:</string>
    <string name="cuadro">Cuadro</string>
    <string name="circulo">Circulo</string>
    <string name="cubo">Cubo</string>
    <string name="triangulo">Triangulo</string>
    <string name="radio">Radio:</string>
    <string name="area">Area:</string>
    <string name="perimetro">Perimetro:</string>
    <string name="calcular">Calcular</string>


</resources>
