<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.camilobc.punto1.MainActivity">

    <TextView
        android:text="Calcula el area, volumen y perimetro de las figuras"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
         />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/todos"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selecciona la figura a calcular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:text="@string/triangulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio3"
                android:layout_weight="1"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:text="@string/cubo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio4"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/circulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:layout_weight="1"
                />

            <RadioButton
                android:text="@string/cuadro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:id="@+id/seleccion"
        android:text="@string/selecciona_la_figura_a_calcular"
        android:layout_below="@+id/titulo"
        android:layout_alignParentStart="true" />


</LinearLayout>
